...
                                width = 0.5.dp,
                                color = MaterialTheme.colors.onSurface
                            )
                            .alignBy(LastBaseline)
                            .padding(spacing.spaceMedium)
                            .semantics {
                                contentDescription = "Amount"
                            }
                    )

                    Spacer(
                        modifier = Modifier.width(spacing.spaceExtraSmall)
                    )
...
